<resources>
    <string name="app_name">DSA_FK_Helper</string>
    <string name="target_movement">Bewegung des Ziels</string>
    <string name="throw_modificator">Wurf-Modifikator</string>
    <string name="tp_modificator">TP-Modifikator</string>
    <string name="target_no_movement">Ziel bewegt sich nicht</string>
    <string name="target_moves">Ziel bewegt sich</string>
    <string name="target_moves_fast">Ziel bewegt sich schnell</string>
    <string name="target_movement_evading">Ziel schlägt Haken</string>
    <string name="player_movement">Bewegung des Charakters</string>
    <string name="player_movement_no">Charakter steht still</string>
    <string name="player_movement_slow">Charakter geht langsam</string>
    <string name="player_movement_normal">Charakter geht normal</string>
    <string name="player_riding_slow">Charakter reitet Tier im Schritt</string>
    <string name="player_riding_medium">Charakter reitet Tier im Trab</string>
    <string name="player_riding_fast">Charakter reitet Tier im Galopp</string>
    <string name="target_size">Größenkategorie des Ziels</string>
    <string name="target_size_tiny">Winzig</string>
    <string name="target_size_small">Klein</string>
    <string name="target_size_medium">Mittel</string>
    <string name="target_size_big">Groß</string>
    <string name="target_size_giant">Rießig</string>
    <string name="distance">Entfernungskategorie</string>
    <string name="distance_close">Nah</string>
    <string name="distance_medium">Mittel</string>
    <string name="distance_far">Weit</string>
    <string name="visibility">Sichtverhältnisse</string>
    <string name="visibility_clear">Ungestört</string>
    <string name="visibility_impared">Leicht gestört (Blattwerk)</string>
    <string name="visibility_foggy">Ziel als Silhouette erkennbar (Nebel)</string>
    <string name="visibility_low">Ziel schemenhaft erkennbar (dichter Nebel)</string>
    <string name="visibility_invisible">Unsichtbar</string>
    <string name="shot_into_fight">Schuss ins Kampfgetümmel?</string>
    <string name="shot_into_fight_yes">Ja</string>
    <string name="shot_into_fight_no">Nein</string>
    <string name="aiming">Wurde gezielt?</string>
    <string name="aiming_no">Nein</string>
    <string name="aiming_short">Ja, eine Kampfrunde</string>
    <string name="aiming_long">Ja, zwei Kampfrunden</string>
    <string name="calculate">Berechnen</string>
</resources>